overflow temp fix

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -279,6 +279,7 @@ textarea {
   border: 1px rgb(98, 82, 82) solid;
   border-radius: 25px 25px 0 0;
   width: 100%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -302,6 +303,7 @@ textarea {
   justify-content: center;
   width: 20%;
   background-color: #2f1223;
+  overflow-x: auto;
 }
 
 #div-thread-op {
